--- a/testcopy.html
+++ b/testcopy.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Black & White is real｜每天一張圖是真的</title>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js'></script>
-    <script src='http://www.turnjs.com/lib/turn.min.js'></script> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -840,7 +839,7 @@
                                 <img src="image/IMG_3313.PNG" alt="" class="img-fluid">
                             </div>
                             <div class="col-12 col-md-5 content p-3 text-center text-md-start" style="align-self: center;">
-                                &emsp;<span class="fw-1 fw-bold">各司其職</span>
+                                &emsp;<span class="fs-1 fw-bold">各司其職</span>
                             </div>
                         </div>
                     </div>
