--- a/draw.html
+++ b/draw.html
@@ -815,6 +815,20 @@
 
                     <div class="swiper-slide page">
                         <div class="row h-100 align-items-center">
+                            <div class="text-center col-12 col-md-7 p-2" style="align-self: center;">
+                                <img src="image/Day39-1.webp" alt="" class="img-fluid">
+                            </div>
+                            <div class="text-center col-12 col-md-7 p-2" style="align-self: center;">
+                                <img src="image/Day39-2.webp" alt="" class="img-fluid">
+                            </div>
+                            <div class="text-center col-12 col-md-7 p-2" style="align-self: center;">
+                                <img src="image/Day39-3.webp" alt="" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide page">
+                        <div class="row h-100 align-items-center">
                             <div class="text-center col-12 p-2" style="align-self: center;">
                                 <img src="image/IMG_3261.webp" alt="" class="img-fluid">
                             </div>
