--- a/draw.html
+++ b/draw.html
@@ -81,7 +81,7 @@
                                 &emsp;「那當我女朋友的第一個條件，就是要讓我帶著拖油瓶。」
                                 <br>
                                 <br>
-                                &emsp;<span class="small">「我只能當拖油瓶嗎？」</span>
+                                <span class="small">&emsp;&emsp;「我只能當拖油瓶嗎？」</span>
                             </div>
                         </div>
                     </div>
@@ -92,7 +92,18 @@
                                 <img src="image/Day02-2.webp" alt="" class="img-fluid">
                             </div>
                             <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
-                                &emsp;「你喜歡的店，我就會一直去；你喜歡的菜，我就會一直點；就像你習慣我在你旁邊這樣。但是，我有自己的事要做，所以你要學著在我不再的時候，自己處理好事情。因為一輩子在你身邊的人不會是我。」
+                                &emsp;「我離開，是不是對你比較好？教授，那個英國的研究計畫，我和你過去。」
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide page">
+                        <div class="row h-100 align-items-center">
+                            <div class="text-center col-12 col-md-7 p-2" style="align-self: center;">
+                                <img src="image/Day02-3.webp" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
+                                &emsp;「你喜歡的店，我就會一直去；你喜歡的菜，我就會一直點；就像你習慣我在你旁邊這樣。但是，我有自己的事要做，所以你要學著在我不在的時候，自己處理好事情。因為一輩子在你身邊的人不會是我。」
                             </div>
                         </div>
                     </div>
@@ -128,7 +139,7 @@
                                 <img src="image/Day04-1.webp" alt="" class="img-fluid">
                             </div>
                             <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
-                                &emsp;###
+                                &emsp;白粉粿 VS 黑森林
                             </div>
                         </div>
                     </div>
@@ -139,7 +150,7 @@
                                 <img src="image/Day04-2.webp" alt="" class="img-fluid">
                             </div>
                             <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
-                                &emsp;###
+                                &emsp;「這次的歌很好聽，很適合你 ( ˶•ᴗ• ˶) 」
                             </div>
                         </div>
                     </div>
@@ -150,7 +161,13 @@
                                 <img src="image/Day05.webp" alt="" class="img-fluid">
                             </div>
                             <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
-                                &emsp;###
+                                &emsp;「你幹嘛停？」
+                                <br>
+                                <br>
+                                &emsp;「你好 ʕ´•◡•`ʔ」
+                                <br>
+                                <br>
+                                &emsp;「最近我們是不是太有緣了，單曲發布同一天同場地，現在還要用同一個休息室。」
                             </div>
                         </div>
                     </div>
@@ -161,7 +178,7 @@
                                 <img src="image/Day06.webp" alt="" class="img-fluid">
                             </div>
                             <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
-                                &emsp;###
+                                &emsp;「你們也是來試鏡的啊，好心告訴你們一個消息，聽說廣告女主內定是柯莎莎，我和廣告主是舊識，先去打招呼了。」
                             </div>
                         </div>
                     </div>
@@ -200,7 +217,7 @@
                                 <img src="image/Day08.webp" alt="" class="img-fluid">
                             </div>
                             <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
-                                &emsp;###
+                                &emsp;「我有個想法，這次的廣告不妨大膽一點，誰說一定要BG，現在網上充斥著各種BL的橋段。」
                             </div>
                         </div>
                     </div>
@@ -261,7 +278,7 @@
                                 &emsp;「我來吧！」
                                 <br>
                                 <br>
-                                &emsp;「ㄟ～坐下！」
+                                &emsp;「ㄟ！坐下！」
                             </div>
                         </div>
                     </div>
@@ -367,10 +384,10 @@
                                 <img src="image/Day17-1.webp" alt="" class="img-fluid">
                             </div>
                             <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
-                                &emsp;###
+                                &emsp;「好啦好啦，他今天呢有點感冒，昨天還發燒，所以，多擔待。你也講話啊，不要都我在講。」
                                 <br>
                                 <br>
-                                &emsp;###
+                                &emsp;「ㄜ……因為白行照顧，所以好多了。」
                             </div>
                         </div>
                     </div>
@@ -613,7 +630,10 @@
                                 <img src="image/Day28.webp" alt="" class="img-fluid">
                             </div>
                             <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
-                                &emsp;###
+                                &emsp;「不過就只是工作，演那麼認真幹嘛？害我以為……我再被你搞得七上八下，我就不姓白！！臭黑衍！臭黑衍！」
+                                <br>
+                                <br>
+                                &emsp;BY「我不想只當觀眾，粉絲那麼多，你肯定看不見我。感覺如果你真的當明星去，我們就是兩個世界的人。」
                             </div>
                         </div>
                     </div>
@@ -693,7 +713,10 @@
                                 <img src="image/Day34-1.webp" alt="" class="img-fluid">
                             </div>
                             <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
-                                &emsp;###
+                                &emsp;「不過，你怎麼你怎麼確定他們兩個會成？你知道的，萬一樓塌，你的廣告可就毀了。」
+                                <br>
+                                <br>
+                                &emsp;「你都不知道那時候，黑衍來找我的時候極深情，我就賭他絕對不會讓我失望。」
                             </div>
                         </div>
                     </div>
@@ -814,7 +837,7 @@
                     </div>
 
                     <div class="swiper-slide page">
-                        <div class="row h-100 align-items-center">
+                        <div class="row align-items-center justify-content-center">
                             <div class="text-center col-12 col-md-7 p-2" style="align-self: center;">
                                 <img src="image/Day39-1.webp" alt="" class="img-fluid">
                             </div>
@@ -855,7 +878,7 @@
                                 <img src="image/IMG_3313.webp" alt="" class="img-fluid">
                             </div>
                             <div class="col-12 col-md-5 content p-3 pl-0 text-center" style="align-self: center;">
-                                &emsp;<span class="fs-1 fw-bold">各司其職</span>
+                                &emsp;<span class="fs-2 fw-bold">各司其職（？）</span>
                             </div>
                         </div>
                     </div>
@@ -869,17 +892,17 @@
               </div>
         </div>
         <div class="row justify-content-center">
-            <input type="number" id="pageFld" min=1 class="col-2 mx-1 text-center align-content-center"/>
-            <div class="col-2 mx-1 text-center align-content-center">
+            <div class="col-2 mx-2 text-center align-content-center btns">
                 <i id="firstBtn" class="fa-2xl fa-solid fa-backward-step"></i>
             </div>
-            <div class="col-2 mx-1 text-center align-content-center">
+            <div class="col-2 mx-2 text-center align-content-center btns">
                 <i id="prevBtn" class="fa-2xl fa-solid fa-circle-chevron-left"></i>
             </div>
-            <div class="col-2 mx-1 text-center align-content-center">
+            <input type="number" id="pageFld" min=1 class="col-2 mx-1 text-center align-content-center"/>   
+            <div class="col-2 mx-2 text-center align-content-center btns">
                 <i id="nextBtn" class="fa-2xl fa-solid fa-circle-chevron-right"></i>
             </div>
-            <div class="col-2 mx-1 text-center align-content-center">
+            <div class="col-2 mx-2 text-center align-content-center btns">
                 <i id="lastBtn" class="fa-2xl fa-solid fa-forward-step"></i>
             </div>
         </div>
