--- a/draw.html
+++ b/draw.html
@@ -892,17 +892,17 @@
               </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-2 mx-2 text-center align-content-center btns">
+            <div class="col-2 text-center align-content-center btns">
                 <i id="firstBtn" class="fa-2xl fa-solid fa-backward-step"></i>
             </div>
-            <div class="col-2 mx-2 text-center align-content-center btns">
+            <div class="col-2 text-center align-content-center btns">
                 <i id="prevBtn" class="fa-2xl fa-solid fa-circle-chevron-left"></i>
             </div>
             <input type="number" id="pageFld" min=1 class="col-2 mx-1 text-center align-content-center"/>   
-            <div class="col-2 mx-2 text-center align-content-center btns">
+            <div class="col-2 text-center align-content-center btns">
                 <i id="nextBtn" class="fa-2xl fa-solid fa-circle-chevron-right"></i>
             </div>
-            <div class="col-2 mx-2 text-center align-content-center btns">
+            <div class="col-2 text-center align-content-center btns">
                 <i id="lastBtn" class="fa-2xl fa-solid fa-forward-step"></i>
             </div>
         </div>
