--- a/draw.html
+++ b/draw.html
@@ -19,7 +19,7 @@
     
     <nav class="navbar navbar-expand-lg fixed-top mb-5 mx-auto justify-content-center">
         <div class="Outer">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="https://www.youtube.com/@Dong-Xi" target="_blank">
                 <img src="image/LOGO.webp" alt="" class="img-fluid">
             </a>
             <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -138,7 +138,7 @@
                             <div class="text-center col-12 col-md-7 p-2" style="align-self: center;">
                                 <img src="image/Day04-1.webp" alt="" class="img-fluid">
                             </div>
-                            <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
+                            <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center; text-align: center !important;">
                                 &emsp;白粉粿 VS 黑森林
                             </div>
                         </div>
