--- a/draw.html
+++ b/draw.html
@@ -45,10 +45,9 @@
         </div>
     </nav>
     <div class="container mx-auto main">
-        <div class="row justify-content-center mb-5 d-flex">
+        <div class="row justify-content-center mb-3 mb-md-5 d-flex">
             <div class="swiper book-swiper">
                 <div class="swiper-wrapper">
-                    
                     <div class="swiper-slide page">
                         <div class="page-inner">
                             <div class="row h-100 align-items-center">
@@ -1042,3 +1041,4 @@
 </body>
 
 </html>
+
