--- a/draw.html
+++ b/draw.html
@@ -154,7 +154,7 @@
                                     <img src="image/Day04-1.webp" alt="" class="img-fluid">
                                 </div>
                                 <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center; text-align: center !important;">
-                                    &emsp;白粉粿 VS 黑森林
+                                    &emsp;<span class="fs-5 fw-normal">白粉粿 VS 黑森林</span>
                                 </div>
                             </div>
                         </div>
@@ -1032,8 +1032,8 @@
                 <i id="lastBtn" class="fa-2xl fa-solid fa-forward-step"></i>
             </div>
         </div>
-    </div>
-    <div class="container" style="height: 100px;"></div>
+    </div><!-- 
+    <div class="container" style="height: 100px;"></div> -->
     
     <script src="javascript/drawjavascript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
@@ -1041,4 +1041,3 @@
 </body>
 
 </html>
-
