--- a/draw.html
+++ b/draw.html
@@ -453,7 +453,7 @@
                                     <img src="image/Day17-2.webp" alt="" class="img-fluid">
                                 </div>
                                 <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
-                                    &emsp;「演戲有學院派和沉浸派，你一定是沉浸派的」
+                                    &emsp;「演戲有學院派和沉浸派，你一定是沉浸派的。」
                                     <br>
                                     <br>
                                     &emsp;「演戲最大的樂趣，就是演著演著連自己都覺得是真的。」
@@ -514,10 +514,10 @@
                                     <img src="image/Day19-3.webp" alt="" class="img-fluid" style="max-height: 550px; height: 100%;">
                                 </div>
                                 <div class="col-12 col-md-5 content p-3 pl-0" style="align-self: center;">
-                                    &emsp;「那些很短的歌都是精華中的精華，然而那些完整版，因為還要鋪陳，所以就沒有那麼完美。」
+                                    &emsp;「那些很短的歌都是精華中的精華，他們快速地吸引你的注意力，然而那些完整版，因為還要鋪陳，所以就沒有那麼完美了。」
                                     <br>
                                     <br>
-                                    &emsp;「你怎麼那麼負面啊？你是不是受過傷？」
+                                    &emsp;「你怎麼那麼負面啊？你是不是受過傷？哎呦～你要有自信一點～」
                                 </div>
                             </div>
                         </div>
