--- a/draw.html
+++ b/draw.html
@@ -45,7 +45,7 @@
         </div>
     </nav>
     <div class="container mx-auto main">
-        <div class="row justify-content-center mb-3 mb-md-5 d-flex">
+        <div class="row justify-content-center mb-3 mb-lg-5 d-flex">
             <div class="swiper book-swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide page">
@@ -1004,6 +1004,67 @@
                                 </div>
                                 <div class="col-12 col-md-5 content p-3 pl-0 text-center" style="align-self: center;">
                                     &emsp;<span class="fs-2 fw-bold">各司其職（？）</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide page">
+                        <div class="page-inner">
+                            <div class="row h-100 align-items-center">
+                                <div class="text-center col-12 col-md-7 p-2" style="align-self: center;">
+                                    <img src="image/IMG_3497.webp" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-12 col-md-5 content p-3 pl-0 text-center" style="align-self: center;">
+                                    &emsp;<span class="fs-2 fw-bold">12/29<br>《我說愛你是真的》介紹會<br></span>
+                                    &emsp;史上最可愛的出場方式！
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide page">
+                        <div class="page-inner">
+                            <div class="row h-100 align-items-center">
+                                <div class="text-center col-12 col-md-7 p-2" style="align-self: center;">
+                                    <img src="image/cutie.webp" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-12 col-md-5 content p-3 pl-0 text-center" style="align-self: center;">
+                                    &emsp;<span class="fs-2 fw-bold">01/04</span><br>
+                                    &emsp;起床後和娃對話3個小時，不知道最後到底有沒有喝到咖啡的葛格
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    
+                    <div class="swiper-slide page">
+                        <div class="page-inner">
+                            <div class="row h-100 align-items-center">
+                                <div class="text-center col-12 col-md-7 p-2" style="align-self: center;">
+                                    <img src="image/IMG_3516.webp" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-12 col-md-5 content p-3 pl-0 text-center" style="align-self: center;">
+                                    &emsp;<span class="fs-2 fw-bold">01/12</span>
+                                    <br>
+                                    <br>
+                                    It's always you ~ ~
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide page">
+                        <div class="page-inner">
+                            <div class="row h-100 align-items-center">
+                                <div class="text-center col-12 col-md-7 p-2" style="align-self: center;">
+                                    <img src="image/ㅇㄷrgbtxt.webp" alt="" class="img-fluid" style="height: 520px;">
+                                </div>
+                                <div class="col-12 col-md-5 content p-3 pl-0 text-center" style="align-self: center;">
+                                    &emsp;<span class="fs-2 fw-bold">01/25 <br>The Wedding Day</span>
+                                    <br>
+                                    <br>
+                                    &emsp;歷史性的一天！我的CP結婚了！！！！！（大喊
                                 </div>
                             </div>
                         </div>
