--- a/draw.html
+++ b/draw.html
@@ -1016,7 +1016,9 @@
                                     <img src="image/IMG_3497.webp" alt="" class="img-fluid">
                                 </div>
                                 <div class="col-12 col-md-5 content p-3 pl-0 text-center" style="align-self: center;">
-                                    &emsp;<span class="fs-2 fw-bold">12/29<br>《我說愛你是真的》介紹會<br></span>
+                                    &emsp;<span class="fs-2 fw-bold">12/29<br>《我說愛你是真的》介紹會</span>
+                                    <br>
+                                    <br>
                                     &emsp;史上最可愛的出場方式！
                                 </div>
                             </div>
@@ -1030,8 +1032,10 @@
                                     <img src="image/cutie.webp" alt="" class="img-fluid">
                                 </div>
                                 <div class="col-12 col-md-5 content p-3 pl-0 text-center" style="align-self: center;">
-                                    &emsp;<span class="fs-2 fw-bold">01/04</span><br>
-                                    &emsp;起床後和娃對話3個小時，不知道最後到底有沒有喝到咖啡的葛格
+                                    &emsp;<span class="fs-2 fw-bold">01/04</span>
+                                    <br>
+                                    <br>
+                                    &emsp;起床後和娃對話3個小時，不知道最後到底有沒有喝到咖啡的葛格 ( ´͈ ᗜ `͈ )و ♡
                                 </div>
                             </div>
                         </div>
@@ -1046,6 +1050,9 @@
                                 </div>
                                 <div class="col-12 col-md-5 content p-3 pl-0 text-center" style="align-self: center;">
                                     &emsp;<span class="fs-2 fw-bold">01/12</span>
+                                    <br>
+                                    <br>
+                                    It's you ~ ~
                                     <br>
                                     <br>
                                     It's always you ~ ~
@@ -1064,7 +1071,7 @@
                                     &emsp;<span class="fs-2 fw-bold">01/25 <br>The Wedding Day</span>
                                     <br>
                                     <br>
-                                    &emsp;歷史性的一天！我的CP結婚了！！！！！（大喊
+                                    &emsp;歷史性的一天！我的CP結婚了！！！！！（大喊 ◝(●˙꒳˙●)◜
                                 </div>
                             </div>
                         </div>
@@ -1102,3 +1109,4 @@
 </body>
 
 </html>
+
